--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
 <body>
     <div class="bg-dark text-white">
+        <img src="logo.png" class="rounded-circle" alt="logo" width="90">
+
         <p class="ms-4">Bienvenido a mi web! <br> <br>  Soy Dani Ferrer Robles, aquí puedes ver el vídeo que he realizado llamado <strong>"Acaba con cualquier adicción gracias al deporte."</strong> Gracias a World Paraswimming por organizar el campeonato, sin esto no podría haber realizado este vídeo. <br><br> La canción que he usado para este vídeo se llama <strong>"Make You Move-Ofshane"</strong>, sacada de Youtube Studio, por lo que es totalmente gratis/libre.</p>
 
 
         <div class="text-center">
             <h2>Make You Move-Ofshane</h2>
             <audio controls>
-                <source src="../audio/Make You Move - Ofshane.mp3" type="audio/mp3">
+                <source src="../audio/MakeYouMove-Ofshane.mp3" type="audio/mp3">
             </audio>            
         </div>
         <br><br>
@@ -24,7 +26,7 @@
         <div class="text-center">
             <h2>Acaba con cualquier adicción gracias al deporte</h2> 
             <video controls class="w-75">
-                <source src="../videos/video editado.mp4" type="video/mp4">
+                <source src="../videos/videoEditado.mp4" type="video/mp4">
             </video>           
         </div>
 
