--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <h2>Acaba con cualquier adicción gracias al deporte</h2> 
             <video controls class="w-75">
                 <source src="../videos/video editado.mp4" type="video/mp4">
-            </video>           
+            </video>
+            <br>
+            <a href="https://studio.youtube.com/video/zL-DjeFBp90/edit">Link al vídeo en Youtube</a>
         </div>
 
     </div>
