--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="text-center">
             <h2>Make You Move-Ofshane</h2>
             <audio controls>
-                <source src="../audio/Make-You-Move - Ofshane.mp3" type="audio/mp3">
+                <source src="Make-You-Move - Ofshane.mp3" type="audio/mp3">
             </audio>            
         </div>
         <br><br>
@@ -26,7 +26,7 @@
         <div class="text-center">
             <h2>Acaba con cualquier adicción gracias al deporte</h2> 
             <video controls class="w-75">
-                <source src="../videos/video editado.mp4" type="video/mp4">
+                <source src="videoEditado2.mp4" type="video/mp4">
             </video>
             <br>
             <a href="https://studio.youtube.com/video/zL-DjeFBp90/edit">Link al vídeo en Youtube</a>
