--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="bg-dark text-white">
-        <img src="logo.png" class="rounded-circle" alt="logo" width="90">
+    <div class="">
+        <img src="logo.svg" class="rounded-circle" alt="logo" width="90">
 
         <p class="ms-4">Bienvenido a mi web! <br> <br>  Soy Dani Ferrer Robles, aquí puedes ver el vídeo que he realizado llamado <strong>"Acaba con cualquier adicción gracias al deporte."</strong> Gracias a World Paraswimming por organizar el campeonato, sin esto no podría haber realizado este vídeo. <br><br> La canción que he usado para este vídeo se llama <strong>"Make You Move-Ofshane"</strong>, sacada de Youtube Studio, por lo que es totalmente gratis/libre.</p>
 
