--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="">
+    <div>
         <img src="logo.svg" class="rounded-circle" alt="logo" width="90">
 
         <p class="ms-4">Bienvenido a mi web! <br> <br>  Soy Dani Ferrer Robles, aquí puedes ver el vídeo que he realizado llamado <strong>"Acaba con cualquier adicción gracias al deporte."</strong> Gracias a World Paraswimming por organizar el campeonato, sin esto no podría haber realizado este vídeo. <br><br> La canción que he usado para este vídeo se llama <strong>"Make You Move-Ofshane"</strong>, sacada de Youtube Studio, por lo que es totalmente gratis/libre.</p>
@@ -26,7 +26,7 @@
         <div class="text-center">
             <h2>Acaba con cualquier adicción gracias al deporte</h2> 
             <video controls class="w-75">
-                <source src="videoEditado2.mp4" type="video/mp4">
+                <source src="videoEditado.mp4" type="video/mp4">
             </video>
             <br>
             <a href="https://studio.youtube.com/video/zL-DjeFBp90/edit">Link al vídeo en Youtube</a>
