--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <source src="videoEditado.mp4" type="video/mp4">
             </video>
             <br>
-            <a href="https://studio.youtube.com/video/zL-DjeFBp90/edit">Link al vídeo en Youtube</a>
+            <a href="https://youtu.be/lXNUQ6dUrMI">Link al vídeo en Youtube</a>
         </div>
 
     </div>
