--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <source src="videoEditado.mp4" type="video/mp4">
             </video>
             <br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/lXNUQ6dUrMI?si=P2MCglv_ZbeFjqM8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/lXNUQ6dUrMI?si=P2MCglv_ZbeFjqM8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <br>
             <a href="https://youtu.be/lXNUQ6dUrMI">Link al vídeo en Youtube</a>
             <br>
